# autolink-driver-safety-monitoring-system

./: CMakeLists.txt  LICENSE  README.md
docs/: architecture.md  hardware.md
main/: CMakeLists.txt  buzzer_manager.c  buzzer_manager.h  config.h  display_manager.c  display_manager.h  driver_monitor.c  driver_monitor.h  event_recorder.c  event_recorder.h  i2c_manager.c  i2c_manager.h  led_manager.c  led_manager.h  main.c  sensor_manager.c  sensor_manager.h  sh1107.c  sh1107.h  state_machine.c  state_machine.h  supabase_client.c  supabase_client.h  supabase_config.h  system_types.h  wifi_driver.c  wifi_driver.h  wifi_manager.c  wifi_manager.h
